--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>420</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="0"><td>406</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="1"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="3"><td>304</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
@@ -34,11 +34,11 @@
 <tr d-ix="5"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="6"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, 420 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript, 406 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
 <pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
 o=a.createOscillator()
-d=.19;[[0,2,4,7],[-3,-1,0,4],[0,2,4,7],[-3,-1,0,4],[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+j)*d)
+d=.19;[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+j)*d)
 for(i=0,j=0;i&lt;17;i++,j++)p(c[j%4]+12*((i/4)|0))
 for(i=0;i&lt;15;i++,j++)p(c[3-((j-1)%4)]+12*(((15-i)/4)|0))})
 o.connect(g=a.createGain()).connect(a.destination)
@@ -53,7 +53,7 @@ o.stop(256*d)}
 
 x=&gt;{a=new AudioContext
 o=a.createOscillator()
-d=.19;[[0,2,4,7],[-3,-1,0,4],[0,2,4,7],[-3,-1,0,4],[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+j)*d)
+d=.19;[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+j)*d)
 for(i=0,j=0;i&lt;17;i++,j++)p(c[j%4]+12*((i/4)|0))
 for(i=0;i&lt;15;i++,j++)p(c[3-((j-1)%4)]+12*(((15-i)/4)|0))})
 o.connect(g=a.createGain()).connect(a.destination)
