--- a/q/263756.html
+++ b/q/263756.html
@@ -26,23 +26,51 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>Jelly</td><td>231022T082422Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/266151#266151">Nick Ken</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Wolfram Language Mathematica</td><td>230806T005138Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263769#263769">138 Aspe</a></td></tr>
-<tr d-ix="2"><td>104</td><td>JavaScript Node.js</td><td>230809T094524Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263922#263922">l4m2</a></td></tr>
-<tr d-ix="3"><td>133</td><td>CellTail</td><td>230809T090817Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263919#263919">The Empt</a></td></tr>
-<tr d-ix="4"><td>053</td><td>05AB1E</td><td>230808T082121Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263869#263869">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>078</td><td>dc</td><td>230806T114900Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263786#263786">Toby Spe</a></td></tr>
-<tr d-ix="6"><td>048</td><td>Vyxal</td><td>230806T110246Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263783#263783">emanresu</a></td></tr>
-<tr d-ix="7"><td>nan</td><td>Nibbles</td><td>230806T092519Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263781#263781">Dominic </a></td></tr>
-<tr d-ix="8"><td>052</td><td>Vyxal Ṫ</td><td>230806T083648Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263777#263777">The Empt</a></td></tr>
-<tr d-ix="9"><td>052</td><td>Charcoal</td><td>230805T201323Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263759#263759">Neil</a></td></tr>
-<tr d-ix="10"><td>100</td><td>Python 3</td><td>230805T211307Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263764#263764">xnor</a></td></tr>
+<tr d-ix="0"><td>100</td><td>Python 3</td><td>230805T211307Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263764#263764">xnor</a></td></tr>
+<tr d-ix="1"><td>053</td><td>Jelly</td><td>231022T082422Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/266151#266151">Nick Ken</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Wolfram Language Mathematica</td><td>230806T005138Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263769#263769">138 Aspe</a></td></tr>
+<tr d-ix="3"><td>104</td><td>JavaScript Node.js</td><td>230809T094524Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263922#263922">l4m2</a></td></tr>
+<tr d-ix="4"><td>133</td><td>CellTail</td><td>230809T090817Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263919#263919">The Empt</a></td></tr>
+<tr d-ix="5"><td>053</td><td>05AB1E</td><td>230808T082121Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263869#263869">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>078</td><td>dc</td><td>230806T114900Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263786#263786">Toby Spe</a></td></tr>
+<tr d-ix="7"><td>048</td><td>Vyxal</td><td>230806T110246Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263783#263783">emanresu</a></td></tr>
+<tr d-ix="8"><td>nan</td><td>Nibbles</td><td>230806T092519Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263781#263781">Dominic </a></td></tr>
+<tr d-ix="9"><td>052</td><td>Vyxal Ṫ</td><td>230806T083648Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263777#263777">The Empt</a></td></tr>
+<tr d-ix="10"><td>052</td><td>Charcoal</td><td>230805T201323Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263759#263759">Neil</a></td></tr>
 <tr d-ix="11"><td>086</td><td>Ruby</td><td>230805T211154Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263763#263763">Level Ri</a></td></tr>
 <tr d-ix="12"><td>080</td><td>Python 3</td><td>230805T225534Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263767#263767">dingledo</a></td></tr>
 <tr d-ix="13"><td>052</td><td>Thunno 2 j</td><td>230805T203226Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263762#263762">The Thon</a></td></tr>
 <tr d-ix="14"><td>109</td><td>Python 3</td><td>230805T203117Z</td><td><a href="https://codegolf.stackexchange.com/questions/263756/calculate-the-aspect-ratio-of-the-nepal-flag/263761#263761">The Thon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 53 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 100 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>from sympy import*
+r=sqrt(2)
+print(N((4-3/((7*r-3-sqrt(59-24*r))*(23-9*r)*16/9/(33-20*r)+r))/3,113))
+</code></pre>
+<p><a href="https://tio.run/##HckxEoQgDEDR3lNYJnEzCHF1KLyCx3C0QDDScHpk7P6fl0o@4iW17hpD/5SQSn@GFDVTp@tzawaHXdLzyrABTCwGYCFl4Q//nt1EikjghH0rsrPxBkTYjW2HZkZ@1gpirS8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>This is longer than compressed hardcoding and definitely golfable, but I want to share a formula I simplified from one in <a href="https://i.ytimg.com/vi/APXaq6i_3hs/hqdefault.jpg" rel="nofollow noreferrer">this thumbnail</a> of <a href="https://www.youtube.com/watch?v=APXaq6i_3hs" rel="nofollow noreferrer">this video</a>:</p>
+<p><span class="math-container">$$\begin{aligned}
+v &amp;= \frac{16 \cdot (7\sqrt{2}-3-\sqrt{59-24\sqrt{2}}) \cdot (23-9\sqrt{2})}{9 \cdot (33-20\sqrt{2})} \\
+\text{ratio} &amp;= \frac{4}{3}-\frac{1}{v+\sqrt{2}}
+\end{aligned}
+$$</span></p>
+<p><strong>92 bytes</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>from sympy import*
+r=5-sqrt(8)
+print(N((4-6/((29-7*r-sqrt(48*r-4))*(8/r/9+8)/r+5-r))/3,113))
+</code></pre>
+<p><a href="https://tio.run/##JcmxDYAgEAXQ3iks71ByUVChcAXHMFog@KVhejSxe8lLJR/xMrXuiKF9SkilPUOKyKrBOunnRibHTcJ5ZdqIrJ6FaPR6UfjXuk@WWZETiO8cC7pJg1lMPwyGudYX" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><strong>95 bytes</strong> (@dingledooper)</p>
+
+<pre class="lang-python prettyprint-override"><code>from sympy import*
+r=sqrt(2)
+print(N((4-3/((7*r-3-sqrt(59-24*r))*(6384+2608*r)/2601+r))/3,113))
+</code></pre>
+<p><a href="https://tio.run/##HYm5EYAgEABzqzC8AxmEwy@wBctwNODxJKF6ZIx2djeVfMVAtZ4cff8Wn0p/@xQ5i4739@EMFrvEd8hwADhFGmARrEj9c9qUdYIRBcy0OmnncW2qG41sWdNgDCHW@gE" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 53 bytes</h1>
 <pre><code>“µŻ5(_PṛØY⁺Ɲ&gt;Ŀḣ¦ḲḶaİçẸẒḋƙ⁷\ø%Sfø*ḤÑ[F]€ȮĠṆ5]Ẇ⁶rȦ’⁾1.;
 </code></pre>
 <p><a href="https://tio.run/##AW8AkP9qZWxsef//4oCcwrXFuzUoX1DhuZvDmFnigbrGnT7Ev@G4o8Km4biy4bi2YcSww6fhurjhupLhuIvGmeKBt1zDuCVTZsO4KuG4pMORW0Zd4oKsyK7EoOG5hjVd4bqG4oG2csim4oCZ4oG@MS47//8" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -59,26 +87,26 @@
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8//9Rw5yHu/oNAmoe7pqkDeQcWpoV96hxx@EdR/dkg7h7D7c/3NkUaR38cOdMEH/dw13ddY8a92YkHNoJ4i@OzazMNH@4c@2jhpl@hyekHp30cOcMoERBUWZeiUZxZW5BpZ6fRlpRfm58UmJxqgZQSgciWpCfU6mhXqGuqamXmJMTX5SfX1KsoRltEKtjaGisqfmoYW7W0Ulh//8DAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>,  <del>69</del> <del>62</del> 57 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>,  <del>69</del> <del>62</del> 57 bytes</h1>
 <p>Saved so many bytes thanks to the comment of <a href="https://codegolf.stackexchange.com/users/56178/greg-martin">@Greg Martin</a> and the comment of <a href="https://codegolf.stackexchange.com/users/81203/att">@att</a></p>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78/7/I9lHHLCNrE31jXcMES0t9jSJtDfMiXWNdoLCGqaWukUmRpqaGkbG@pW6RpqGZvoaxsa6RAVDs////ugVFmXklAA" rel="nofollow noreferrer">Try it online!</a></p>
 <pre class="lang-mathematica prettyprint-override"><code>r=√2;4/3-1`99/(r+(7r-3-√(59-24r))(23/9-r)16/(33-20r))
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 104 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 104 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;'1.'+0x3a4898772b89091168fc7c6102ed1580a718bf8643e9be1c097cfadb7db934a09ad75c14a79b0262ce77978b500e9n
 </code></pre>
 <p><a href="https://tio.run/##BcEBCsIwDADA52xDHEnbNQlj/iVNW1HGKk7E39e7p371tPfj9bkeLZdet67bbcB5uMDPa2BhIpdYQBAjVyOLCK5kXBiUkFPlGHyRVNBAyKrmRDmJDwqimRbDoCQJXHRWiIQ4LQBFjr5aO862l3lv97GO07T2Pw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Quite but not completely trivial</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/mousetail/CellTail" rel="nofollow noreferrer">CellTail</a>, 133 Bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/mousetail/CellTail" rel="nofollow noreferrer">CellTail</a>, 133 Bytes</h1>
 <pre><code>I=1,219010337,829452184,570024869,930988566,595012333,319564573,717095598,126738932,453440900,697025685,812058867,615169596,6441;O=N;
 </code></pre>
 <p>Outputs as a list of numbers, starting with the integer component.</p>
 <p><a href="https://mousetail.github.io/CellTail/#ST0xLDIxOTAxMDMzNyw4Mjk0NTIxODQsNTcwMDI0ODY5LDkzMDk4ODU2Niw1OTUwMTIzMzMsMzE5NTY0NTczLDcxNzA5NTU5OCwxMjY3Mzg5MzIsNDUzNDQwOTAwLDY5NzAyNTY4NSw4MTIwNTg4NjcsNjE1MTY5NTk2LDY0NDE7Tz1OOw==" rel="nofollow noreferrer"><code>I=&quot;Try it online!&quot;;O=C;</code></a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 53 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 53 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>•4₅XÃ¯Máô|û¡Žü%ÔÖ7àþ}iÙ°fàp!LÙÔ‡ĀΣH₁ù¸ê_+0×B&lt;È„u•„1.ì
 </code></pre>
 <p><a href="https://tio.run/##AWYAmf9vc2FiaWX//@KAojTigoVYw4PCr03DocO0fMO7wqHFvcO8JcOUw5Y3w6DDvn1pw5nCsGbDoHAhTMOZw5TigKHEgM6jSOKCgcO5wrjDql8rMMOXQjzDiOKAnnXigKLigJ4xLsOs//8" rel="nofollow noreferrer">Try it online.</a></p>
@@ -92,7 +120,7 @@
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (section <em>How to compress large integers?</em>)</a> to understand how the compression works.</p>
 </div>
-<div id="pu5" class="pu"><h1>dc, 78 bytes</h1>
+<div id="pu6" class="pu"><h1>dc, 78 bytes</h1>
 <pre><code>16iFFk594DB3BD338 2v474E23564B*-2v4BBEB1DE8*37B8DC90+76 2v30*-v*-41946AB7E96/p
 </code></pre>
 <p>It's a straight calculation, but with the constants specified in hexadecimal for brevity</p>
@@ -112,7 +140,7 @@ FFx                         # 255-digit precision
 12949021847336692342653120129739301327854858381983
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="noreferrer">Vyxal</a>, 48 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="noreferrer">Vyxal</a>, 48 bytes</h1>
 <pre><code>»ʀ⌈S«A0ẇ⟨Ė^Ṗ*«)Πṙvp≈›≥›BĖ≥ẇ₈ḋẇβẋV¼»16↵τyNY∆Ph⁺°Ḟ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2#WyIiLCIiLCLCu8qA4oyIU8KrQTDhuofin6jEll7huZYqwqspzqDhuZl2cOKJiOKAuuKJpeKAukLEluKJpeG6h+KCiOG4i+G6h86y4bqLVsK8wrsxNuKGtc+EeU5Z4oiGUGjigbrCsOG4niIsIiIsIlsyNDMzNTY3NDIyMzUwNDQsIDEzMjU1Njg1NDg4MTI2MDgsIDI3MDA4OTk4NDc1MjEyNDQsIDI0Mzk5NTE0NDQwODY4ODAsIDgyNDYzNDcyNTM4OTIyNV0iXQ==" rel="noreferrer">Try it Online!</a></p>
@@ -126,14 +154,14 @@ FFx                         # 255-digit precision
                ⁺°Ḟ # Format to 113 decimal places
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 50 bytes (100 nibbles)</h1>
+<div id="pu8" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 50 bytes (100 nibbles)</h1>
 <pre><code>&quot;1.&quot;$ ~3a4898772b89091168fc7c6102ed1580a718bf8643e9be1c097cfadb7db934a09ad75c14a79b0262ce77978b500e9
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=Nc25DQJBDADAVtCJFGTvZ7scfyshIRIgpRGSSxA1XTcEwDQwz_flZHbO67q-7rd54C0WPC773aNqY2GiYiwgiIOnkw-EkoGdQQnZJo9WUyzRQcinhlGY1KYgGtQdm5IYlFE8iYTYOkDK9_qV__oD" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Same approach as <a href="https://codegolf.stackexchange.com/a/263759/95126">Neil's first Charcoal answer</a>.<br />
 Nibbles can only handle integers, so outputting the initial <code>1.</code> and the decimal digits separately is essential.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a> <code>Ṫ</code>, 52 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a> <code>Ṫ</code>, 52 bytes</h1>
 <pre><code>‛1.»⟑]&quot;Ȯ⁋æ≥ǔ}¼√ḋ¾d¯₴÷≤„~-↳§*≤4_⌐↳¯→ḟS∆Y↵Ḃ¥zjλ…°qẆ∷9»
 </code></pre>
 <p>String sum magic! La la la!</p>
@@ -148,7 +176,7 @@ Nibbles can only handle integers, so outputting the initial <code>1.</code> and 
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 52 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 52 bytes</h1>
 <pre><code>1.”)¶⌊G U9ι[abN↧Ｑ∧≡⁻w⁼Ka5↧χ±ν∕§G\`U⊙Gφ2Ｓ4↖gλo0θ｜Sψ◨N➙
 </code></pre>
 <p><a href="https://tio.run/##LY07CgJREASvIhtpoMyvZ6bxEl5h2URhURDx@s8X2FlRBb3d1/f2Wvcxbu/H83Nc9LKcroc/mFJU3KuNAdMOlIhFJ@nCbmSCEDWfUyJn4KUlBNhqWd50C3iEUCRZYsjGdILurFRoEsyM0Hk9xjh/9x8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code, for what it's worth. Explanation: Prints <code>1.</code> separately, because that improves the string compression of the remaining 112 digits.</p>
@@ -181,34 +209,6 @@ Nibbles can only handle integers, so outputting the initial <code>1.</code> and 
 <pre><code>▷sympy.N⟦∕∕⁺⁸η⁶⁺¹∕ηθ¹¹³
 </code></pre>
 <p>Calculate the desired result.</p>
-</div>
-<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3/" rel="noreferrer">Python 3</a>, 100 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>from sympy import*
-r=sqrt(2)
-print(N((4-3/((7*r-3-sqrt(59-24*r))*(23-9*r)*16/9/(33-20*r)+r))/3,113))
-</code></pre>
-<p><a href="https://tio.run/##HckxEoQgDEDR3lNYJnEzCHF1KLyCx3C0QDDScHpk7P6fl0o@4iW17hpD/5SQSn@GFDVTp@tzawaHXdLzyrABTCwGYCFl4Q//nt1EikjghH0rsrPxBkTYjW2HZkZ@1gpirS8" rel="noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>This is longer than compressed hardcoding and definitely golfable, but I want to share a formula I simplified from one in <a href="https://i.ytimg.com/vi/APXaq6i_3hs/hqdefault.jpg" rel="noreferrer">this thumbnail</a> of <a href="https://www.youtube.com/watch?v=APXaq6i_3hs" rel="noreferrer">this video</a>:</p>
-<p><span class="math-container">$$\begin{aligned}
-v &amp;= \frac{16 \cdot (7\sqrt{2}-3-\sqrt{59-24\sqrt{2}}) \cdot (23-9\sqrt{2})}{9 \cdot (33-20\sqrt{2})} \\
-\text{ratio} &amp;= \frac{4}{3}-\frac{1}{v+r}
-\end{aligned}
-$$</span></p>
-<p><strong>92 bytes</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>from sympy import*
-r=5-sqrt(8)
-print(N((4-6/((29-7*r-sqrt(48*r-4))*(8/r/9+8)/r+5-r))/3,113))
-</code></pre>
-<p><a href="https://tio.run/##JcmxDYAgEAXQ3iks71ByUVChcAXHMFog@KVhejSxe8lLJR/xMrXuiKF9SkilPUOKyKrBOunnRibHTcJ5ZdqIrJ6FaPR6UfjXuk@WWZETiO8cC7pJg1lMPwyGudYX" rel="noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p><strong>95 bytes</strong> (@dingledooper)</p>
-
-<pre class="lang-python prettyprint-override"><code>from sympy import*
-r=sqrt(2)
-print(N((4-3/((7*r-3-sqrt(59-24*r))*(6384+2608*r)/2601+r))/3,113))
-</code></pre>
-<p><a href="https://tio.run/##HYm5EYAgEABzqzC8AxmEwy@wBctwNODxJKF6ZIx2djeVfMVAtZ4cff8Wn0p/@xQ5i4739@EMFrvEd8hwADhFGmARrEj9c9qUdYIRBcy0OmnncW2qG41sWdNgDCHW@gE" rel="noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu11" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 86 bytes</h1>
 
